dist/1.0/bin/sample/retrieveUnpackaged/objects/contractcase__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Assigned_Queue_Name__c</fullName>
        <label>Assigned Queue Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_Contract_End__c</fullName>
        <label>Days to Contract End</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_address_to_manager__c</fullName>
        <label>Email address to manager</label>
        <type>Email</type>
    </fields>
    <label>ContractTOCase</label>
</CustomObject>